add ret_crash and branchcond_ignored cases

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,5 @@ endif()
 
 add_subdirectory(lib)
 add_subdirectory(texunit_limit)
+add_subdirectory(ret_crash)
+add_subdirectory(branchcond_ignored)
