add fogcoord_swizzle case

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(amd_arbpg_repros C)
 set(CMAKE_C_STANDARD 11)
 
 if(MSVC)
-        add_compile_options(/W4 /experimental:external /external:anglebrackets /external:W3)
+        add_compile_options(/W4)
 else()
         add_compile_options(-Wall)
 endif()
@@ -12,3 +12,4 @@ add_subdirectory(lib)
 add_subdirectory(texunit_limit)
 add_subdirectory(ret_crash)
 add_subdirectory(branchcond_ignored)
+add_subdirectory(fogcoord_swizzle)
