verify behaviours against nvidia

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,4 +12,5 @@ add_subdirectory(lib)
 add_subdirectory(texunit_limit)
 add_subdirectory(ret_crash)
 add_subdirectory(branchcond_ignored)
+add_subdirectory(branchcond_ignored_nv)
 add_subdirectory(fogcoord_swizzle)
